# refl-index

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: refl-file-format.md
refl_index/: __init__.py  cli.py  dtypes.py  indexer.py  reader.py
tests/: conftest.py  test_dtypes.py  test_indexer.py  test_reader.py
