[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "refl-index"
version = "0.1.0"
description = "Sidecar index for DIALS .refl msgpack files"
requires-python = ">=3.11"
dependencies = ["msgpack>=1.0"]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = [
    "pytest", 
    "pytest-cov",
    "pytest-xdist",
]

[project.scripts]
refl-index = "refl_index.cli:main"

[tool.setuptools]
packages = ["refl_index"]
